--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -19,6 +19,7 @@
 
   <body>
     <main>
+     <article>
       <section>
         <h2>社会</h2>
         <h3>和菓子店も「トリックオアトリート!」</h3>
@@ -61,13 +62,14 @@
         </form>
       </sction>
 
-    <sction>
+       <sction>
       <h2>テクノロジー</h2>
       <h3>SAMURAIが新しい動画をリリース</h3>
       <p>SAMURAI公式Youtubeで新しい動画がリリースされました。<br>動画の内容はHTML/CSSの解説です。</p><br>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/2JLiGSUohEo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       <p>&copy; SAMURAIニュース</p>
-    </sction>
+      </sction>
+     </article>
     </main>
   </body>
 </html>
