--- a/kadai_014/kadai_014.html
+++ b/kadai_014/kadai_014.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <title>14章課題</title>
-    <mata name="description" cintent="このページは14章の課題です。">
+    <mata name="description" content="このページは14章の課題です。">
     <mata charset="uft=8">
       <link rel="stylesheet" href="style.css">
-    </head>
+  </head>
 
-    <heder>
+    <header>
       <h1><span class="text-skyblue">M</span>Y<span class="text-pink">P</span>ROFILE</h1>
-    </heder>
+    </header>
 
     <body>
       <main>
