--- a/kadai_018/kadai_018.html
+++ b/kadai_018/kadai_018.html
@@ -9,10 +9,9 @@
 
   <body>
       <div class="top">
-        <div class="top-child">
-         <p><span id="first-span">sample</span><span id="second-span">sample</span><span id="third-span">sample</span></p>
-
-      </div>
+         <p class="top-child">sample</p>
+         <p class="top-child">sample</p>
+         <p class="top-child">sample</p>
     </div>
     
     <div class="middle">
