--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>8章課題</title>
-    <mata name="description" cintent="このページは8章の課題です。">
+    <mata name="description" content="このページは8章の課題です。">
     <meta charset="utf-8">
   </head>
 
@@ -30,7 +30,7 @@
         <audio src="ichi.mp3" controls></audio>
       </section>
 
-      <sction>
+      <section>
         <form>
           <label>氏名</label>
           <input type="text" placeholder="名前を入力してください">
@@ -60,15 +60,15 @@
             <input type="submit" value="送信">
             <input type="reset" value="リセット">
         </form>
-      </sction>
+      </section>
 
-       <sction>
-      <h2>テクノロジー</h2>
-      <h3>SAMURAIが新しい動画をリリース</h3>
-      <p>SAMURAI公式Youtubeで新しい動画がリリースされました。<br>動画の内容はHTML/CSSの解説です。</p><br>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/2JLiGSUohEo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-      <p>&copy; SAMURAIニュース</p>
-      </sction>
+      <section>
+        <h2>テクノロジー</h2>
+        <h3>SAMURAIが新しい動画をリリース</h3>
+        <p>SAMURAI公式Youtubeで新しい動画がリリースされました。<br>動画の内容はHTML/CSSの解説です。</p><br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/2JLiGSUohEo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <p>&copy; SAMURAIニュース</p>
+      </section>
      </article>
     </main>
   </body>
