--- a/kadai_022/kadai_022.html
+++ b/kadai_022/kadai_022.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>22章課題</title>
-    <mate name="description" content="このページは22章の課題です。">
-    <mata charaset="utf-8">
+    <mete name="description" content="このページは22章の課題です。">
+    <meta charset="utf-8">
       <link rel="stylesheet" href="style.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -13,32 +13,32 @@
   <h1>今日の傘予報</h1>
  </header>
   <main>
-    <div id class="parent">
+    <div id="parent">
        <div class="contents">
        <h2>東京の天気</h2>
         <p>今日の天気は雨です。</p>
         <p>傘を持って行ってください。</p>
-         <img src="rainy.png">
+         <img src="image/rainy.png">
         </div>
        <div class="contents">
          <h2>北海道の天気</h2>
          <p>今日の天気は曇りです。</p>
          <p>傘は念のため持っていきましょう。</p>
-        <img src="cloudy.png">
+        <img src="image/cloudy.png">
         </div>
         <div class="contents">
           <h2>沖縄の天気</h2>
           <p>今日の天気は晴れです。</p>
           <p>傘は必要ないでしょう。</p>
-         <img src="sunny.png">
+         <img src="image/sunny.png">
         </div>
     </div>
   </main>
 
   <footer>
     <div class="container">
-    <a href=https://www.sejuku.net/corp/>
-    <h2>&copy;SAMURAI WEATHER NEWS></h2>
+    <a href=https://www.sejuku.net/corp></a>
+    <h2>&copy;SAMURAI WEATHER NEWS</h2>
   </div>
   </footer>
 </body>
