--- a/kadai_022/kadai_022.html
+++ b/kadai_022/kadai_022.html
@@ -37,8 +37,7 @@
 
   <footer>
     <div class="container">
-    <a href=https://www.sejuku.net/corp></a>
-    <h2>&copy;SAMURAI WEATHER NEWS</h2>
+    <a href="https://www.sejuku.net/corp/">&copy;SAMURAI WEATHER NEWS</a>
   </div>
   </footer>
 </body>
