--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -62,13 +62,13 @@
         </form>
       </section>
 
-      <section>
+      <footer>
         <h2>テクノロジー</h2>
         <h3>SAMURAIが新しい動画をリリース</h3>
         <p>SAMURAI公式Youtubeで新しい動画がリリースされました。<br>動画の内容はHTML/CSSの解説です。</p><br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/2JLiGSUohEo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <p>&copy; SAMURAIニュース</p>
-      </section>
+      </footer>
      </article>
     </main>
   </body>
